--- a/WebGL.htm
+++ b/WebGL.htm
@@ -53,19 +53,23 @@
                 [
 	                {
 	                	key:'三角形和矩形',
-	                	value:'三角形和矩形'
+	                	value:'ATriangleAndASquare'
 	                },
                     {
                         key:'带颜色的三角形和矩形',
-                        value:'带颜色的三角形和矩形'
+                        value:'AddingColour'
                     },
                     {
                         key:'能动的三角形和矩形',
-                        value:'能动的三角形和矩形'
+                        value:'ABitOfMovement'
                     },
                     {
                         key:'金字塔和立方体',
-                        value:'金字塔和立方体'
+                        value:'SomeReal3DObjects'
+                    },
+                    {
+                        key:'材质立方体',
+                        value:'IntroducingTextures'
                     }
                 ],
                 editable: false,
@@ -135,8 +139,8 @@
     </div>
     <div data-options="region:'center'" style="height:100%; overflow: hidden; border: 0px; padding: 0px; margin: 0px;">
         <div class="easyui-layout" data-options="" style="width:100%;height:100%;overflow: hidden; background-color: #272822; border: 0px; padding: 0px; margin: 0px;">
-            <div id="webGLDiv" data-options="region:'center'" title="WebGL" style="width: 60%;height:100%; overflow: hidden;background-color: #272822; border: 0px; padding: 0px; margin: 0px;">
-                <canvas id="WebGL" style="width:100%; height: 100%;overflow: hidden; background-color: #272822;border:0px;padding:0px;margin:0px;"></canvas>
+            <div id="webGLDiv" data-options="region:'center'" title="WebGL" style="width:40%; height:100%; overflow: hidden;background-color: #272822; border: 0px; padding: 0px; margin: 0px;">
+                <canvas id="WebGL" style="width:100%; height:100%;overflow: hidden; background-color: #ffffff;border:0px;padding:0px;margin:0px;"></canvas>
             </div>
             <div data-options="region:'east'" style="width: 40%; height: 100%; overflow: hidden; border: 0px; padding: 0px; margin: 0px;">
 				<div class="easyui-panel" title="VertexShader" style="width:100%;height:50%; background-color: #272822; border: 0px; padding: 0px; margin: 0px; ">
